Tidy up sph-cart

--- a/blog/2022-01-25-sph-cart.md
+++ b/blog/2022-01-25-sph-cart.md
@@ -1,19 +1,26 @@
 ---
 slug: MO_rotation
-title: Rotating molecular orbital coefficients
+title: How to rotate MO coefficients
 authors: [prs]
 tags: [qm,molecular orbitals,linear algebra]
 ---
 
-If you're a masochist like me, you'll want to rotate molecular orbital coefficients
+If you're a masochist like me, and you're writing or have written a quantum chemistry
+program, you'll want to rotate molecular orbital (MO) coefficients
 to save yourself recalculating wavefunctions at different positions/orientations.
+Now that I've sufficiently reduced the interested audience for this to the point we
+could fit in the seats of a social-distanced sedan, let me take you on a painful 
+but *hopefully* helpful journey.
 
 Throughout this I'm going to assume that all rotations are about some common origin, $\mathbf{O}$,
-but of course you're welcome to double the pain and mix in rotations about arbitrary points in space.
+but of course you're welcome to double the pain and mix in rotations about arbitrary points in space if you wish to be more general. I'm also going to put aside the various different
+ordering conventions, which will probably make you pull your hair out if you try to
+interoperate between many different programs.
 
-But first we need a quick refresher on the difference between Cartesian and Spherical/Pure basis sets.
-Note that throughout this I'm going to ignore different normalizations within contracted Gaussians,
-because frankly that just makes the equations more verbose...
+But first we need a quick refresher on the difference between Cartesian and spherical/pure 
+Gaussian basis sets like those used in quantum chemistry.
+Note that throughout this I'm going to ignore elaboration of the different normalizations
+within contracted Gaussians, because frankly that just makes the equations more verbose...
 
 ## Contracted Gaussian basis sets
 Contracted Gaussian functions are of the form
@@ -22,7 +29,7 @@ $$
 \chi(\mathbf{r}, \mathbf{r_k}) = \sum_k^K c_k N f(\mathbf{r} - \mathbf{r_k}) e^{-\alpha_k |\mathbf{r} - \mathbf{r_k}|^2}
 $$
 
-where $K$ is the degree of contraction (i.e. number of primitive basis functions),
+where $K$ is the degree of contraction (i.e. number of primitive Gaussian functions),
 $N$ is the normalization constant we're going to ignore for now, $\alpha_k$ is the
 exponent for each primitive basis function and $c_k$ the contraction coefficient.
 
@@ -155,9 +162,13 @@ to perform the conversion via the following algorithm implemented in C++:
  * Result should be R: an MxM rotation matrix for 
  * P: a MxN set of coordinates
  * giving results P' = R P
+ *
+ * Assume that the poorly named power_index_arrays gives
+ * arrays of length l that look like the following:
  * xy = {0, 1}
  * xyz = {0, 1, 2}
  * xxy = {0, 0, 1}
+ * xyx = {0, 1, 0}
  */
 template <int l>
 Mat cartesian_gaussian_rotation_matrix(const Mat3x3 rotation) {
@@ -183,6 +194,11 @@ Mat cartesian_gaussian_rotation_matrix(const Mat3x3 rotation) {
     return result;
 }
 ```
+
+In essence this is just accounting for all the redundant terms we'd
+get that arise from the permutations of tensor indices. Going through
+the code line-by-line
+
 
 So our rotated column vector (or block of a matrix) of molecular orbital
 coefficients will simply be
@@ -230,7 +246,8 @@ of the same total angular momentum, where (if $i,j,k$ are powers of $x,y,z$ resp
 $\mathbf{S}$ can be derived from the following horrible expression:
 
 $$
-S(i_1, j_1, k_1, i_2, j_2, k_2) = \frac{(i_1 + i_2)! (j_1 + j_2)! (k_1 + k_2)!}{((i_1 + i_2)/2)! ((j_1 + j_2)/2)! ((k_1 + k_2)/2)!} \sqrt{\frac{i_1 ! j_1 ! k_1 ! i_2 ! j_2 ! k_2 !}{(2 i_1)! (2 j_1)! (2 k_1)! (2 i_2)! (2 j_2)! (2 k_2)!}}
+S(i_1, j_1, k_1, i_2, j_2, k_2) = \frac{(i_1 + i_2)! (j_1 + j_2)! (k_1 + k_2)!}{((i_1 + i_2)/2)! ((j_1 + j_2)/2)! ((k_1 + k_2)/2)!}
+ \times \sqrt{\frac{i_1 ! j_1 ! k_1 ! i_2 ! j_2 ! k_2 !}{(2 i_1)! (2 j_1)! (2 k_1)! (2 i_2)! (2 j_2)! (2 k_2)!}}
 $$
 
 where all of $i_1 + i_2$, $j_1 + j_2$ and $k_1 + k_2$ are even, $0$ otherwise.
@@ -249,4 +266,5 @@ $$
 \mathbf{P}' = \mathbf{c} \mathbf{R} \mathbf{c}^{-1} \mathbf{P}
 $$
 
-Whew...
+Whew... Hopefully I don't have any errors in the equations, but if I do feel free
+to name and shame me for being so sloppy.
